deployment/03-splunk-operator-1.0.3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: splunk-operator
  template:
    metadata:
      labels:
        name: splunk-operator
    spec:
      serviceAccountName: splunk-operator
      containers:
      - name: splunk-operator
        image: docker.io/splunk/splunk-operator:1.0.3
        imagePullPolicy: IfNotPresent
