deployment/08-splunk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
 labels:
   app.kubernetes.io/component: controller
 name: nginx
 namespace: splunk-01
 annotations:
   ingressclass.kubernetes.io/is-default-class: "true"
spec:
 controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 # annotations:
 #   kubernetes.io/ingress.class: nginx
 name: splunk-ingress
 namespace: splunk-01
spec:
 ingressClassName: nginx
 rules:
 - host: splunk-01.luma
   http:
     paths:
     - backend:
         service:
           name: splunk-s1-standalone-service
           port:
             number: 8000
       path: /
       pathType: Prefix
